# mop

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  libtool
doc/: Makefile  Makefile.in
doc/doxy/: mop.dxy  mop.dxy.bak  mop.tex
doc/doxy/auto/: mop.el
doc/html/: Makefile  Makefile.am  Makefile.in  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  formula.repository  globals.html  globals_func.html  group__interp.html  group__logging.html  group__mop.html  index.html  interp_8c.html  modules.html  mop_8c.html
doc/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  group__interp.tex  group__logging.tex  group__mop.tex  interp_8c.tex  modules.tex  mop_8c.tex  refman.aux  refman.idx  refman.out  refman.tex  refman.toc
src/: Makefile  Makefile.am  Makefile.in  block.c  factorial.c  interp.c  libmop.la  mop-config  mop-config.in  mop-logging.c  mop-logging.h  mop-logging.lo  mop.c  mop.h  mop.lo  mopblock.h
src/.deps/: block.Plo  factorial.Plo  interp.Plo  mop-logging.Plo  mop.Plo
src/.libs/: libmop-0.1.so.0  libmop-0.1.so.0.0.0  libmop.la  libmop.lai
tests/: Makefile  Makefile.am  Makefile.in  README  cubetest.m  data  indyrows.m  ldtfile.m  matrices.m  mkxutest.m  mop-test  mop-test.c  test.dvi  test.tex  xupoly.m  xx
tests/.deps/: mop-test.Po
tests/auto/: test.el
